update nk-sql blog

--- a/_posts/2021-09-28-牛客SQL总结.md
+++ b/_posts/2021-09-28-牛客SQL总结.md
@@ -341,6 +341,123 @@ on
     p.id = t.person_id
 ```
 
+### SQL82
+
+<img src="/../assets/NK-SQL/image-20211019162627904.png" alt="image-20211019162627904" style="zoom:50%;" />
+
+```sql
+SELECT
+    o.id,
+    o.is_group_buy,
+    case o.is_group_buy
+        when 'No' then c.name
+        else 'None'
+    end client_name 
+FROM
+    order_info as o
+JOIN
+    (
+    SELECT
+        user_id
+    FROM
+        order_info
+    where
+        date > '2025-10-15' and
+        status = 'completed' and
+        product_name in ('C++', 'Java', 'Python')
+    GROUP by
+        user_id
+    HAVING
+        COUNT(*) >= 2
+    ) as t
+    ON
+        o.user_id = t.user_id
+left join
+    client as c
+    on
+        o.client_id = c.id
+where
+    o.date > '2025-10-15' and
+    o.status = 'completed' and
+    o.product_name in ('C++', 'Java', 'Python')
+
+```
+
+### SQL83
+
+<img src="/../assets/NK-SQL/image-20211019162736374.png" alt="image-20211019162736374" style="zoom:50%;" />
+
+```sql
+select
+    case o.client_id
+        when 0 then 'GroupBuy'
+        else c.name
+    end source,
+    o.cnt
+FROM
+    (
+    select
+        client_id,
+        count(*) cnt
+    from
+        (
+        SELECT
+            user_id
+        FROM
+            order_info
+        WHERE
+            date > '2025-10-15' and
+            status = 'completed' and
+            product_name in ('C++', 'Java', 'Python')
+        GROUP BY
+            user_id
+        HAVING
+            COUNT(*) >= 2
+        ) as t,
+        order_info
+     where
+         t.user_id = order_info.user_id and
+         order_info.date > '2025-10-15' and
+         order_info.status = 'completed' and
+         order_info.product_name in ('C++', 'Java', 'Python')
+     group by
+         order_info.client_id
+    ) o
+left JOIN
+    client as c
+    ON
+        o.client_id = c.id
+order BY
+    source
+```
+
+### SQL86
+
+<img src="/../assets/NK-SQL/image-20211019163146236.png" alt="image-20211019163146236" style="zoom:50%;" />
+
+```sql
+-- 查询在2025年投递简历的每个岗位，每个月内收到简历的数量和，对应的2026年的同月同岗位收到简历的数量，最后的结果先按first_year_mon月份降序，再按job降序排序显示
+SELECT h1.job,first_year_mon,first_year_cnt,second_year_mon,second_year_cnt 
+FROM 
+-- 2025年的 
+(SELECT job,DATE_FORMAT(DATE,'%Y-%m') AS first_year_mon,SUM(num) AS first_year_cnt
+FROM resume_info
+WHERE DATE LIKE '2025%'  -- 符合最左前缀匹配原则，也走索引
+GROUP BY job,first_year_mon) AS h1
+-- inner join 假装优化下，inner可以省略
+INNER JOIN 
+-- 2026年的
+(SELECT job,DATE_FORMAT(DATE,'%Y-%m') AS second_year_mon,SUM(num) AS second_year_cnt
+FROM resume_info
+WHERE DATE LIKE '2026%'  -- 符合最左前缀匹配原则，也走索引
+GROUP BY job,second_year_mon) AS h2  
+-- 表连接条件：两表job相同且月份相同，
+-- 因date日期类型经过 DATE_FORMAT()后变成 字符串，所以使用right()函数取后两位即为月数
+ON h1.job=h2.job AND  right(first_year_mon,2)=right(second_year_mon,2) 
+-- 排序
+ORDER BY first_year_mon DESC,h1.job DESC;
+```
+
 
 
 ## 排名序号
@@ -385,6 +502,70 @@ GROUP BY
     id, number
 order BY
     t_rank
+```
+
+### SQL81
+
+<img src="/../assets/NK-SQL/image-20211019162524334.png" alt="image-20211019162524334" style="zoom:50%;" />
+
+```sql
+SELECT
+    a.user_id , 
+    a.first_buy_date , 
+    c.date , 
+    a.cnt
+FROM
+    (
+    SELECT 
+        user_id , 
+        MIN(date) first_buy_date , 
+        COUNT(*) cnt
+    FROM 
+        order_info
+    WHERE 
+        date > '2025-10-15'
+    AND status = 'completed'
+    AND product_name IN ('C++' , 'Java' , 'Python')
+    GROUP BY 
+        user_id
+    HAVING 
+        COUNT(*) >= 2
+    ) a
+JOIN 
+    (
+    SELECT 
+        user_id , 
+        date
+    FROM
+        (
+        SELECT 
+            user_id ,
+            date , 
+            RANK() OVER(PARTITION BY user_id ORDER BY date) rnk
+        FROM 
+            order_info
+        WHERE 
+            date > '2025-10-15'
+        AND status = 'completed'
+        AND product_name IN ('C++' , 'Java' , 'Python')
+        ) b
+     WHERE 
+        b.rnk = 2
+     ) c
+ON 
+    a.user_id = c.user_id
+ORDER BY 
+    a.user_id;
+```
+
+### SQL87
+
+<img src="/../assets/NK-SQL/image-20211019163337353.png" alt="image-20211019163337353" style="zoom:50%;" />
+
+```sql
+select grade, sum(number) over(order by grade) t_rank 
+from class_grade 
+order by grade;
 ```
 
 
@@ -605,6 +786,21 @@ from login
 group by date
 order by date;
 ```
+
+#### SQL85
+
+<img src="/../assets/NK-SQL/image-20211019162856125.png" alt="image-20211019162856125" style="zoom:50%;" />
+
+```sql
+-- 按月统计数量并排序
+select job,date_format(date,'%Y-%m') as mon,sum(num) as cnt
+from resume_info
+where date like '2025%'  -- 符合最左前缀匹配原则，也走索引
+group by job,mon
+order by mon desc,cnt desc;
+```
+
+
 
 ### 窗口函数
 
