add something in suibi blog

--- a/_posts/2021-12-01-怎样学习一个新知识（持续更新）.md
+++ b/_posts/2021-12-01-怎样学习一个新知识（持续更新）.md
@@ -1,9 +1,9 @@
 ---
-title: 怎样学习一个新知识（持续更新）
+title: 一些小思考合集
 tags: 随笔
 ---
 
-# 怎样学习一个新知识（持续更新）
+# 怎样学习一个新知识
 
 ​	今天在看阮一峰博客周刊的时候，看见了对学习时”是看视频还是读书“学习的方式好“的讨论。想起我在学习整个后端知识栈的时候，都是**先看视频进行入门，过程中查阅博客和资料，最后看专业书籍进行深度了解**。
 
@@ -11,4 +11,24 @@ tags: 随笔
 
 ![image-20211201164036884](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211201164036884.png)
 
-待完结。。。
+# 备份的重要性
+
+​	现在无论是网盘、手机备忘录、电脑硬盘还是移动硬盘，都可以进行信息的存储，但安全性和稳定性都需要关注。还有就是记录的地方太多，会显得很凌乱，平时就也不会再去看它。
+
+​	这两天我也是很纠结这个问题，后来综合考虑，我这么处理：
+
+>- Github blog上进行抒写和发布：
+>  - 技术博客和学习经验等分享
+>- flomo
+>  - 笔记功能，日常的会议记录、思考记录等（ 比备忘录正式一点）
+>  - 多端复制消息
+>  - 一些笔记 ，可以后期整理到博客或者mac本地存储/云盘。
+>- ios备忘录进行存储:
+>  - 个人私密信息等
+>  - check table、个人计划、待完成事项
+>  - 临时手写和演示草稿
+>- 关于存储和备份
+>  - github blog、flomo、ios备忘录，定期进行mac本地存储和云端备份。
+>  - 一些非重要备份，可以存放到移动硬盘中
+
+​	目前已经把一些视频教程、学术时代的一些东西全部放在硬盘，平时会多端用到的就放阿里云盘，百度云盘暂时清空用来下载一些连接。
