finish my student time blog

--- a/_posts/2021-12-10-我的学生时代.md
+++ b/_posts/2021-12-10-我的学生时代.md
@@ -5,7 +5,7 @@ tags: 随笔
 
 # 我的学生时代
 
-**引文**：之前想和恩师一起聚一聚吃饭的，但是因为疫情暂时不能离开南京市。除了叙叙旧，我有很多话和人生感悟想找一位倾听者，正好小师弟面临高考，想让我给一些参考意见。于是，就想着可以从高中开始，写一篇关于高考本科选择、校园生活学习、研究生选择、工作选择相关的人生感悟（类似自传吧～
+**引文**：之前想和恩师一起聚一聚吃饭的，但是因为疫情暂时不能离开南京市。除了叙叙旧，我有很多话和人生感悟想找一位倾听者，正好小师弟面临高考，想让我给一些参考意见。于是，就想着可以从高中开始，写一篇关于高中学习生活，高考本科选择、校园生活学习、研究生选择、工作选择相关的人生感悟（类似自传吧～
 
 # **高中**
 
@@ -28,6 +28,8 @@ tags: 随笔
    之所以把“复习”放在第一位，是因为它真的很重要，比学习新知识还重要！复习是对一本书知识的梳理，最好可以根据目录或者自己的归纳，写出知识点进行复习。更有甚者，我当时复习的程度是，无论那门课，那本书，说到那个知识点，我可以一口说出所在页数，甚至能回忆起书本那一页的样子。这也是我的记忆方法“**图像记忆法**”。
 
    复习的时间也很重要，不要等到考试前才复习，当天的知识尽量当天复习，每周再对本周或近几周知识做一个总结。所以我高中的时候特别喜欢放假，这个时候我就有大把时间复习。
+
+   然后考试前的一两天和当天，只需要稍微看一下难记忆的点即可，缓解压力的同时，也会更高效和针对性的备考。
 
 2. 自学
 
@@ -131,7 +133,7 @@ tags: 随笔
 
 - 大四
 
-  大四上学期好像和大三下学期类似，就是18年那年吧，享受着人生。
+  大四上学期好像和大三下学期类似，就是18年那年吧，顺利保研后，就继续享受着人生。
 
   但是大四下学期就比较难受了，去了外校，也就是南大做毕设，又开始了各种压力和自我怀疑，还有对研究生生活和南京生活的不习惯，幸好在4月份做完毕设就回上海了！
 
@@ -139,17 +141,182 @@ tags: 随笔
 
   19年的6月份也顺利毕业，开始了研究生生活，这个也后文再说，先总结一下大学本科的我。
 
-## 关于学业
+## 关于学习方法和保研的选择
 
-- 学习方法
+1. 学习方法
+
+   - 及时消化课程知识
+
+     ​	每天上完课后，我都回去图书馆把当天课上没听懂的地方都去理解清楚。这也是非常重要的点，因为有些课程还是比较紧的，一周会有多次，如果一次听不懂没有及时理解，那下一节课就会直接懵掉了。
+
+     ​	当然大学生很多都会在考试周前再去复习，这也无可厚非，我还是喜欢把事情做在平时，“**不打无准备的仗**”。
+
+   - 借助作业理解知识点
+
+     ​	大学生的作业也是非常的多。当去理解完今天的知识的时候后，就可以边完成作业，边更深度的理解知识。**最重要的，遇到不会的，一定要看答案**。这点和高中不同，高中的基础相对基础，需要根据作业去锻炼自己解题的能力，大学的知识难度较高，需要先把知识理解即可，如果理解力很厉害的话，有自己的体会和理解会更好。
+
+   - 关于实践学科
+
+     - 编程课。对于电子系的学生，第一次接触c和c++时候，一脸懵。我在听完课后，会去把书后面的习题，一题一题的做一遍，不会的就去看答案，要理解，理解完再自己做一遍。对于一些基础的算法，比如冒泡排序什么的，甚至可以达到记忆的程度，久而久之，会提高自己的编程能力。
+     - 电路课。课程需要在硬件电路板上完成各种功能，这应该也是大学里面的第一次大量动手实践课。对理论知识和差错能力都是很大的考验。所以，在理论知识理解透彻后，可以多花点时间泡在实验室里面，把觉得奇怪的地方弄懂，一步一步调试。（记得当时，老师也是在课程外的时间去开放实验室给我们练习）
+
+2. 保研
+
+   - 一些条件
+
+     这个我大一进校就知道有这个事情，所以能做的也就比较简单：
+
+     - 不能挂科！！！
+     - 每门课尽可能拿高绩点！！！
+     - 一些比赛，如果感兴趣可以参加，特别是市级、省级、国家级，会有相应加分。
+
+   - 夏令营和9月推免
+
+     在大三结束和大四开学前的那个暑假，会有各大学校的夏令营，可以去报名参加，如果通过会发offer，后续保研名额正式下来的时候，就可以选择了。
+
+     我当时是参加了南大的夏令营，就是参观学校和各个实验室，然后最后一天会有个面试答辩，问专业相关的知识。一共就二三天左右。
+
+     除了夏令营，还有9月有个推免系统，不过建议走夏令营，机会更大。
+
+   - 学信网信息填写
+
+     等过段时间，如果通过夏令营会邮件通知offer，然后就开始选导师了。我是发了几个老师的邮件，然后我现在的导师秒回邮件，问了些问题就接受我了。后续其他老师邮件过来后，我就没有回复了，就这么草率的决定了导师。所以选**导师环节，一定要重视**，利用夏令营多认识学校的学长和学姐，也多和同级的同学通通气，选错导师，可是3年的事情。
+
+     保研一般会在9月28号，去学信网填写相关信息。
+
+     接着可能导师会联系你去做毕设，如果想抓紧大四的时间休息，建议别去；如果一心科研，那越早去越好。
 
 ## 一些非常重要的感悟
 
-- 调节情绪
+​	这个part是除了学业的感悟。大学4年时间，说长不长，说短不短。对我而言，是我性格从内向到开朗的转变过程，也是我价值观形成的过程。
 
-- 关于游戏
+### 要学会社交
 
-  先玩好才能学好
+​	在高中的三年，虽然收获了很多很多，但是最让我遗憾的是：几乎整个三年被学业占据，我的心智几乎没有长进。不会社交，不会说话，没有对人生的思考。即使有对事物的反抗，但没有成形的价值观，所以一到大学便越到各种各样的社交问题。不过，三生有幸，遇见知己，开启了改变自己的几年时光。
 
-- 大胆社交，收获友情，感受爱情
+​	学会了大胆帮助他人。很多时候，我很想帮助别人，但是由于内向，我会选择无视（不是不善良，是真的害羞，可能社牛们不懂哈哈哈）。记得在大学第一次提供帮助是帮一个女生推自行车上坡，全程不敢抬头，全程脸红哈哈哈。大家肯定觉得很奇怪吧，为什么我会这么害羞，讲道理我也不清楚😂。
+
+​	之后在知己的陪伴下，我们去接触其他专业，其他学院的同学，慢慢的我也不那么害怕了，也比较享受和不同人交流的过程。后面好像我自己也会选一些公共课，和其他专业的同学多多交流，也很幸运，也遇到了很多很多nice的同学，非常开心！！！
+
+​	不断的扩大交际圈，收获友情，甚至收获爱情，这会让你受益终身！所以，大胆社交！这个可是课上无法教你的东西。
+
+### 要学会娱乐
+
+​	记得大一刚开学的时候，看到大家很喜欢去上海各地逛逛，而我对去校外玩耍没有多大兴趣。后来仔细想了一下，除了我当时比较内向外，更重要的是小时候已经逛遍了上海各地，非常熟悉，那自然没有多大兴趣，我就自然专注力就在课程和学业上面。这说明了一个非常重要的概念，**“先玩好，才能学好”**。这可能也适用于初高中的小朋友们，假设他们早已玩遍各种玩具和景点，吃遍各种美食，那他们可能心智也会更成熟，对这些自然兴趣会小很多，也会把注意力放到学习上。
+
+​	然后谈到的点就是家长们都非常诟病的“**游戏**”。首先我觉得不是游戏什么的问题啦，归根结底就是**自律** ，这点我在高中part的时候就说过这个。举几个我的例子和情境，大家看看我的做法有没有问题。
+
+1. 有天晚上我需要去图书馆学习，已经计划好了。但是吃饭的时候在玩**阴阳师**，可能玩的起劲了，饭吃完了还继续玩了1个小时左右。然后自己意识到时间有点晚了，赶紧放下手机，去了图书馆。
+
+   很多人会说要不玩这个游戏，我岂不是就按计划去图书馆了。但是如果我不完，一天到晚去学，我肯定会对书本知识疲倦，从而产生抵触心理。游戏是个缓解对学习疲倦的方式而已。如果那天我没有继续玩，那么就算我去了图书馆，我心里肯定还是痒痒的，不如**先玩好，再专心去学**。
+
+2.  有点晚上我从图书馆学习回来好像已经晚上11点半了，洗漱完到床上应该已经12点多了。那天可能作业比较多，真的学了一天，非常非常累了，所以就打了一局**王者荣耀**，然后可能遇到什么有趣的事情了，发了个朋友圈。被我父亲看见了，直接怼”这么晚了，还在玩游戏，我看了多心痛“，我记得我当时回了句”这么晚，我也是学习到这么晚，才休息“。
+
+   很多人也会说那么晚了，干嘛不直接睡觉算了，休息好。但是我要反驳你了，此时闭眼睡觉，明天起床的一天又是充满学习的一天，还是和上面收到的原因类似，几天下来人就会很疲倦了。玩一局游戏，这里面最关键的因素不在游戏身上，而是**在我的学习中穿插了可以缓解学习疲倦的事情**。
+
+所以对一个自律的人，无论是游戏还是其他娱乐方式，都不会成为他的阻碍。所以，家长们，你们应该教给孩子的**不是如何去戒掉游戏，而是如何去学会自律**。
+
+另外，在15-19年间，**王者荣耀**的大火，也带来了全新的社交方式---“王者社交”。不熟悉的人一起玩玩游戏，相互配合，也会相识；熟悉的人一起开黑，也会度过这段非常开心的时光。
+
+### 要调节情绪
+
+​	成熟的人，有个共同的特点，就是会隐藏自己的情绪。
+
+​	我之前好像也是会有不开心的就直接怼，不管体不体面，不管场合合适不合适。但是最终自己还是会受伤。所以学会礼貌，学会分场合，学会控制自己的情绪，非常重要。
+
+​	不过后来学会在人前控制情绪后，我会把我的很多情绪发泄在社交平台上。之前没觉得，现在倒觉得也非常的不合适，应该没有人会喜欢带着负面情绪的人吧。然后我就控制了我的朋友圈的情绪，哈哈哈跑去微博上宣泄了。但是发现微博上也有好多小可爱啊😂，但是如果微博我也控制了，我已不是没地方了。
+
+​	转念一想，应该每个人都有不开心的时候，都有一些或多或少的负面情绪吧，所以找一个你认为合适，你认为得体的方式去发泄～别让你的负面情绪影响到其他人就行。
+
+# 硕士研究生
+
+​	2019年的6月份就来到南京大学，正式开始了研究生的生活。
+
+## 那些科研的日子
+
+​	我是2019年2月份寒假结束就来到南大实验室进行校外毕设，相当于提前体验研究生生活。但是日子可没那么好过哇，编写嵌入式代码，查各种资料，半知半解的去研究自己的系统。非常累，只想着快点结束毕设回上海去哈哈哈。
+
+​	正式开始研究生生活就是2019的7月份了，那个暑假的两个月第一次承担科研任务，一开始还是没感觉的，慢慢的做着很多都不是很清楚，知道9月份开始往返公司和学校，让我感觉力不从心，也非常的焦虑。一方面觉得这个任务我一个人完成非常吃力，另一方面每周多次离开学校去公司，错过了课程和打卡。最后就和导师商量解决方法。可惜，发生了很多不开心的事情。然后开始考虑转软件开发了。研一上学期基本上就一事无成了，但是确定了后续转软件的想法了。
+
+​	2019年底爆发了疫情，2020年初开始长达半年的居家学习了。这段时间除了完成实验室一些莫名其妙的事情，就开始学习我的Java后端技术栈，也是非常的通过的度过。知道2020年6月份入学后，前一届师兄毕业，我接手他的活，自己才正式有了较为明确的研究方向。接着2020年下半年就白天干实验室的事情，晚上学习后端开发，非常的辛苦。这下半年也完成了姿态识别方向的2个系统的设计，第3个系统也开始了一点萌芽。
+
+​	2021年上半年，继续完成了第3个系统的设计，中间起起伏伏，最后顺利的完成。这段时间也是在进行实习生的面试，也是忙的不可开交。2021年的下半年已经进入研三了，帮实验室干些服务器设计和其他软件开发的活，也写着自己系统相关的论文，另一方面也开始进行秋招！
+
+### 正确对待研究生规划
+
+​	下面是从知乎看到的两首诗，可以看到两种不同的规划和结果。大家自己品。
+
+- 科研型
+
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211215152706821.png" alt="image-20211215152706821" style="zoom:50%;" />
+
+- 事业型
+
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211215152805726.png" alt="image-20211215152805726" style="zoom:50%;" />
+
+### 正确对待导师态度
+
+​	如题！！！
+
+学业方面，现在是2021年12月中旬了，即将进入研三下学期，也是研究生最后半学期了，希望毕业顺利，一切顺利吧～
+
+## 关于求职
+
+​	好家伙，自从决定要开始干软件了，收集起资料开始干！
+
+### 准备过程
+
+​	我可“**不打无准备的仗**”！
+
+- 开端
+
+  我应该是2019年的那个国庆节，在b站上把java入门看完了，算是准备的一个开端吧。后面2个月因为实验室的一些事情，好像还看了一些Python的知识，那个时候可能还没确定要干嘛吧。2019年底，买了一本《Java编程思想》开始肯，那个时候和导师不开心，也不去实验室了，天天在图书馆待着啃这本书。
+
+- 系统学习
+
+  2020年寒假过后，应该是2月22号左右。买了一套java后端技术栈视频开始啃。乍一看，这么多！！！果然也是学了2个多月左右。
+
+  四五月份左右买了10几本书开始细看每个技术点，把知识挖深。同时也跟着视频做了点项目，但是大部分不太懂。
+
+- 知识进阶
+
+  在6月份开始，开始把项目自己整合和提升，从零开始，一行一行的写。其中出现很多的bug和知识漏洞也正好就补上了。10月份左右开始写博客了，当时是在简书上，用的富文本格式书写的，那时候还不懂markdown。
+
+  这个时候也开始刷leetcode的题了。
+
+- 面试准备
+
+  2021年过完年后，就开始实习生面试了，面试的很多问题都是自己准备过的，第一次对自己自信了！4月份左右，考虑到简书博客的格式非常固定，开始基于github自己搭建博客，就是现在这个啦！
+
+准备完上述这些就差不多了，然后就每周固定复习博客的知识，按时刷题巩固leetcode题。
+
+### 面试经历和offer选择
+
+- 实习生
+
+  2021年2月份投递的阿里的icbu提前批，当时部门、地点啥的什么也不清楚，也没考虑，先投了再说，然后就开始面试了。面过之后在3月8号左右，阿里实习系统开放前，转投了cbu，很快面了3面就发了实习offer。
+
+  实习生面试主要是给自己增加面试经验、确定自己准备的方向正确。
+
+- 秋招
+
+  投了很多公司，也做了很多笔试。最后成功通过的就是BAM了，当时还发了庆祝的朋友圈。
+
+  <img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211215154735989.png" alt="image-20211215154735989" style="zoom:40%;" />
+
+- offer选择
+
+  自己的第一意向就是阿里了。
+
+  1. Java系的殿堂
+  2. 后续想往架构师发展，阿里这边技术比较扎实，想在这里打牢基础
+  3. 实习生的时候各种原因没有去，这次不想辜负它了
+
+# 关于家庭教育和学校教育
+
+​	这个点单独拉出来，是因为对这个的思考结果，才使得我做出很多相关的人生规划。
+
+​	不过此时，很多话和观点还无法用语言表达。此板块放在这里，已经具有它的意义了。
+
+​	当读者看到此题时，当你开始思考此题时，想必你已经有你的答案了。
 
