append sth to Virbd Linux Blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -281,3 +281,244 @@ tags: 操作系统OS
 - 架构开放，开源，免费或少许费用
 - 多任务、多用户
 
+## Linux文件
+
+​	**在Linux系统中，每个设备都被当成一个文件来对待**。常见设备与对应Linux文件名如下：
+
+![image-20211220105319380](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211220105319380.png)
+
+​	几乎所有的硬件设备文件都在`/dev`这个目录内。
+
+## Linux磁盘分区
+
+### 磁盘分区文件
+
+​	**整块磁盘的第一个扇区特别重要**，记录了整块磁盘的重要信息。主要有两个重要的信息：
+
+- 主引导分区（Master Boot Record， MBR）：可以安装引导加载程序的地方，有446bytes。
+- 分区表（partition table）：记录整块磁盘分区的状态，有64bytes。
+
+### 分区表
+
+​	分区的最小单位为**柱面**。分区是以**柱面号码**的方式记录，在分区表的64bytes中，总共分为**四组记录区**，每组及录取记录该区段的**起始与结束的柱面号码**。
+
+​	分区表64bytes最多容纳四个分区，这四个分区被称为**主(Primary)分区**，若主分区被继续划分，则成为**扩展(Extended)分区**。
+
+![image-20211220110119164](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211220110119164.png)
+
+​	假设硬盘为/dev/hda，则四个区的文件名为如下，其中后面跟的数字，与该分区所在的位置有关。
+
+- P1: /dev/hda1
+- P2: /dev/hda2
+- P3: /dev/hda3
+- P4: /dev/hda4
+
+### 扩展分区
+
+​	Linux一块硬盘想分出不止四个分区，是可以的。**既然第一个分区所在的分区表只能记录四条数据，那可以利用额外的扇区来记录更多的分区信息**。
+
+![image-20211220111330670](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211220111330670.png)
+
+
+
+​	上图P1称为主分区，P2称为扩展分区，L[1-5]由P2继续切分而来称为**逻辑分区(logical partition)**。设备文件名如下。注意没有/dev/hda3和/dev/hda4。因为**前四个号码都是留给Primary或者Extended用的**
+
+- P1: /dev/hda1
+- P2: /dev/hda2
+- L1: /dev/hda5
+- L2: /dev/hda6
+- L3: /dev/hda7
+- L4: /dev/hda8
+- L5: /dev/hda9
+
+​	有几个注意点：
+
+- 扩展分区最多只能有一个
+- 能够被格式化后作为数据访问的分区为主分区和逻辑分区，扩展分区无法格式化
+- 逻辑分区数量依操作系统不同，在Linux系统中，IDE硬盘最多59个逻辑分区（5-63号），SATA硬盘有11个逻辑分区（5号到15号）
+
+### 建议的磁盘规划
+
+- 简单的分区方法
+
+  仅分出根目录与内存交换空间(/ 和 swap)。
+
+  swap内存交换空间的功能是：当有数据被存放在物理内存里面，但是这些数据又不是常被CPU所取用时，那么这些不常被使用的程序将会被丢到硬盘的swap交换空间中，而将快速的物理内存空间释放出来给真正需要的程序使用。
+
+- 稍微麻烦
+
+  需要较大容量和读写频繁的目录，独立于根目录分区。常见容量大或读写频繁的目录：
+
+  - /
+  - /usr
+  - /home
+  - /var
+  - swap
+
+## Linux开机流程
+
+### 正常开机
+
+1. BIOS，开机主动执行的程序，会识别第一个可开机的设备（硬盘）。
+2. MBR，第一个可开机设备的第一个扇区内的主引导分区块，内包含引导加载程序。
+3. 引导加载程序（Boot loader），读取内核文件
+   - 提供菜单：用户选择不同的开机选项，也是**多重引导**的重要功能。
+   - 载入内核文件：直接指向可开机的程序区段来开始操作系统
+   - 转交其他loader：将引导加载功能转交给其他loader负责。
+4. 内核文件，内核文件工作，开始操作系统的功能。
+
+### 多重引导
+
+其中引导加载程序除了可以安装在MBR之外，还可以安装在每个分区的引导扇区(boot sector)，才有了**多重引导**功能。
+
+![image-20211220134716538](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211220134716538.png)
+
+​	每个分区都有自己的启动扇区，实际可开机的内核文件是放置在各分区内的。
+
+​	loader只会认识自己的系统分区内的可开机内核文件和其他loader，loader可以直接指向或是间接将管理权转交另一个管理程序。
+
+## Linux文件结构和磁盘挂载
+
+- 文件结构
+
+​	Linux使用**目录树**结构，以根目录（/）为主，然后向下呈现分枝状的目录结构的一种文件结构。
+
+​	如何结合目录树的架构与磁盘内的数据，这个时候就牵扯到“挂载”（mount）问题。
+
+![image-20211222142446218](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222142446218.png)
+
+- 磁盘挂载
+
+  利用一个目录当进入点，将磁盘分区的数据放置在该目录下，即**进入该目录就可以读取该分区**。这个操作成为**挂载**，进入点的目录成为**挂载点**。
+
+  如下图，当数据放置在/home内的各个目录时，数据放置在partition2分区；当数据放置在其他目录时，数据放置在partiton1目录。
+
+![image-20211222142819962](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222142819962.png)
+
+
+
+## Linux启动
+
+​	在Linux默认登录模式中，主要分为两种：
+
+- 纯文本界面（运行等级 run level 3)，可以拥有tty1~tty6的终端界面。
+- 图形界面（运行等级 run level 5），拥有tty1~tty7。其中tty7就是开机后等待登录的图形环境。
+
+登录环境的切换：
+
+- [Ctrl] + [Alt] + [F1] ~ [F6]：文字界面登录tty1~tty6终端
+- [Ctrl] + [Alt] + [F7]：图形界面桌面
+
+## Linux命令行和简单命令
+
+### 用户符号区别
+
+- 普通用户
+
+  [xxx@xxx ~]$，其中`~`代表的是用户的主文件夹，即/home/username文件夹
+
+- root
+
+  [xxx@xxx ~]#，命令提示符和普通用户不一样，且~代表/root文件夹
+
+### 开关机相关
+
+- 将数据同步写入硬盘
+
+  ```shell
+  sync
+  ```
+
+- 退出登录
+
+  注销Linux，退出登录状态。
+
+  ```shell
+  exit
+  ```
+
+- 关机
+
+  ```shel
+  shutdown
+  poweroff
+  ```
+
+- 重启
+
+  ```shell
+  reboot
+  ```
+
+### 基础操作命令
+
+​	在Linux中，不一样的大小写代表不同命令，即**大小写敏感**。
+
+- 显示日期和时间
+
+  ```shell
+  data
+  ```
+
+- 显示日历
+
+  ```shell
+  cal
+  ```
+
+- 简单计算器
+
+  ```shell
+  bc
+  ```
+
+### 重要的热键
+
+- [Tab]
+
+  具有“命令补齐”和“文件补齐”功能。
+
+- [Ctrl] + C
+
+  中断当前程序。但对于比较重要的命令慎用。
+
+- [Ctrl] + D
+
+  代表**键盘输入结束**。也可以代替`exit`命令。
+
+### 查询命令 man
+
+​	man是manual（操作说明）的简写。查询的结果页面称为man page。
+
+- man page存放位置
+
+  一般为`/usr/share/man`，可以修改`/etc/man.config`或`/ect/man.conf`或`/etc/manpath.conf`来改变man page的查询路径。
+
+- 使用方法
+
+```shell
+man command
+```
+
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222153617005.png" alt="image-20211222153617005" style="zoom:80%;" />
+
+- 一些操作
+
+  ![image-20211222154010796](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222154010796.png)
+
+- man page简单解析
+
+  - 第一行，命令后面的数字的含义
+
+  ![image-20211222153704567](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222153704567.png)
+
+  - 其他参数
+
+    ![image-20211222154050586](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222154050586.png)
+
+### 查询命令 info
+
+​	和man类似，但输出格式有所不同。
+
+# Linux文件系统
+
