append Virbd-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -411,6 +411,10 @@ tags: 操作系统OS
 
 ## Linux命令行和简单命令
 
+### 可以输入多条命令
+
+​	使用**分号(;)**隔开多条命令，命令按顺序执行。
+
 ### 用户符号区别
 
 - 普通用户
@@ -421,7 +425,26 @@ tags: 操作系统OS
 
   [xxx@xxx ~]#，命令提示符和普通用户不一样，且~代表/root文件夹
 
-### 开关机相关
+### 执行命令的查询路径PATH
+
+- 概念
+
+  在终端执行命令的时候，其实由一个同名的可执行文件存在。系统会按照PATH的设置去每个PATH定义的目录下查询可执行文件，如果有多个同名的可执行文件，先查到的可执行文件先执行。
+
+- 查看PATH
+
+  ```shell
+  echo $PATH
+  ```
+
+  每个目录之间以冒号(:)隔开，有顺序之分。
+
+- 一些事项
+
+  - 不同身份用户默认的PATH不同，默认能够随意执行的命令也不同
+  - **使用绝对路径或相对路径直接指定命令的文件名来执行，会比查询PATH来的正确**
+
+### 开关机相关命令
 
 - 将数据同步写入硬盘
 
@@ -520,5 +543,466 @@ man command
 
 ​	和man类似，但输出格式有所不同。
 
+### 查看Linux内核信息命令
+
+- 查看实际的内核版本
+
+```shell
+uname -r
+```
+
+- 查看distribution信息
+
+```shell
+lsb_release -a
+```
+
+
+
 # Linux文件系统
+
+​	Linux使用Ext2/Ext3作为文件系统。
+
+## 文件属性与权限
+
+​	任何一个文件都具有User、Group和Others 三种等级权限。root可以查看所有文件。
+
+![image-20211223104508097](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223104508097.png)
+
+### 文件属性
+
+#### 属性查看
+
+- 使用`ls -al`命令可以查看当前文件下所有的文件详细的属性与权限。
+
+  ![image-20211223104925835](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223104925835.png)
+
+- 参数
+
+  ![image-20211223105504819](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223105504819.png)
+
+  | 权限       | 连接 | 所有者 | 用户组 | 文件容量 | 修改日期    | 文件名      |
+  | ---------- | ---- | ------ | ------ | -------- | ----------- | ----------- |
+  | drwx------ | 3    | root   | root   | 4096     | Sep 5 10:37 | .gconf      |
+  | -rw-r--r-- | 1    | root   | root   | 42304    | Sep 4 18:26 | install.log |
+
+#### 属性解析
+
+- 第一列，文件类型与权限
+
+  一共10个字符。
+
+  ![image-20211223105515659](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223105515659.png)
+
+  第一个字符代表文件是“目录、文件或链接文件等”
+
+  - [d]是目录
+  - [-]是文件
+  - [l]表示连接文件（linkfile）
+  - [b]表示可供存储的接口设备
+  - [c]表示串行端口设备，如键盘、鼠标等
+
+  后面9个字符，3个分为一组"rwx"的组合，r为可读，w为可写，x为可执行。如果没有相应权限，用[-]代替。
+
+  - 第一组，**文件所有者的权限**
+  - 第二组，**用户组的权限**
+  - 第三组，**其他人的权限**
+
+  **特别注意这些权限对于文件和目录的意义**:
+
+  - 对于文件的意义
+
+    特别对于w权限，具有**写入、编辑、新增、修改**文件的内容的权限，但**并不具备删除该文件本身的权限**。
+
+  - 对于目录的意义
+
+    - r权限，表示可以读取目录下的文件名数据
+
+    - w权限，表示具有更改目录结构列表的权限，包括：
+
+      - 新建新的文件和目录
+      - 删除文件和目录
+      - 重命名文件和目录
+      - 转移该目录内的文件、目录位置
+
+    - x权限，表示用户能否进入该目录成为工作目录
+
+      即cd命令能否进入
+
+- 第二列，有多少文件名连接到此节点
+
+  每个文件都会将权限与属性记录到文件系统的i-node中。这个属性记录有多少不同的文件名连接到相同的一个i-node号码。
+
+- 第三列，表示文件所有者账号
+
+- 第四列，表示文件的所属用户组
+
+- 第五列，文件容量的大小，默认为**B**
+
+- 第六列，这个文件的创建文件日期或最近的修改日期
+
+  ​	特别注意一下文件的时间，Linux下面会记录许多的时间参数，其中有三个主要的变动时间。**ls默认显示的是mtime**。
+
+  - modification time(mtime)
+
+    文件的“内容数据”（不是文件属性或权限）改变时，更新mtime
+
+  - status time(ctime)
+
+    文件的“状态”（权限或属性被修改等）改变时，更新ctime
+
+  - access time(atime)
+
+    当“文件的内容被读取”（如使用cat命令)时，更新atime
+
+- 第七列，文件名。
+
+  隐藏文件，文件名有个`.`
+
+### 改变文件属性与权限
+
+#### 改变文件所属用户组 chgrp
+
+​	注意，改变后的组名要在`/etc/group`文件中才行。
+
+```shell
+chgrp [-R] groupname filename
+```
+
+#### 改变文件所有者 chown
+
+​	注意，改变后的用户要在`/etc/password`文件中才行。此外，还可以顺便改变用户组。
+
+```shell
+chown [-R] username filenmae
+
+chown [-R] username:groupname filename
+```
+
+​	使用环境，如`cp`命令，复制文件时，会同时复制执行者的属性与权限，可能需要改变权限。
+
+#### 改变文件的权限 chmod
+
+​	用来改变文件的权限，有两种方式：数字、符号。
+
+- 数字类型
+
+  使用数字来代替`rwx`。
+
+  - r:4
+  - w:2
+  - x:1
+  - -:0
+
+  每组权限`rwx`的权限数字，是对应的数字相加。如：
+
+  > owner = rwx = 4 + 2 + 1 = 7
+  >
+  > group = rwx = 4 + 2 + 1 = 7
+  >
+  > others = --- = 0 + 0 +0
+
+  命令使用方式：
+
+  ```shell
+  chmod [-R] xyz filename
+  ```
+
+- 符号类型
+
+  使用u, g, o分别代替user 、group、others三种身份，a代表all，即全部身份。
+
+  ![image-20211223112151967](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223112151967.png)
+
+  ```shell
+  chmod u=rwx, go=rx filename
+  
+  chmod a+x filename
+  ```
+
+### 文件的默认权限
+
+​	在新建文件或目录时候的权限默认值，由umask指定。
+
+​	umask是四个数字，如`0022`，与一般权限有关的后三个数字，分别表示user、group、others需要**在默认权限的基础上拿掉的权限**。比如这里group和others需要去掉`w`权限。
+
+![image-20211224112749847](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211224112749847.png)
+
+```shell
+umask xxx #直接设置ugo需要去掉的权限
+```
+
+#### 默认情况的权限
+
+- 若用户创建“文件”，**默认没有可执行`x`权限**，只有`rw`权限，所有最大为666，即默认权限为：
+
+  `-rw-rw-rw-`
+
+- 若用户创建“目录”，默认为777，即
+
+  `drwxrwxrwx`
+
+#### 设置umask后的权限
+
+​	比如若umask为`0022`
+
+- 新建文件时
+
+  `-rw-rw-rw-` - `-----w--w-` = `-rw-r--r--`
+
+- 新建目录时
+
+  `drwxrwxrwx` - `d----w--w-` = `drwxr-xr-x`
+
+### 文件的隐藏属性
+
+#### 设置文件的隐藏属性
+
+![image-20211224113249637](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211224113249637.png)
+
+#### 显示文件隐藏属性
+
+![image-20211224113314101](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211224113314101.png)
+
+### 文件特殊权限
+
+​	在Linux的一些特殊文件的权限里，如`/tmp`、`/usr/bin/passwd`等，有`s`、`t`等等权限。
+
+![image-20211224133849294](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211224133849294.png)
+
+#### SUID
+
+​	`s`出现在文件所有者的`x`权限上时，称为Set UID，简称SUID权限。提供的功能：
+
+- SUID权限仅对**二进制**程序有效
+- 执行者对于该程序具有`x`的执行权限
+- 本权限仅在执行该程序过程中有效
+- 执行者将具有该程序所有者的权限
+
+![image-20211224134144319](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211224134144319.png)
+
+#### SGID
+
+​	`s`出现在文件用户组的`x`权限上时，称为Set GID，简称SGID权限。如`/usr/bin/locate`文件。
+
+对于**文件**提供的功能：
+
+- SGID对二进制程序有用
+- 程序执行者对该程序具有`x`权限
+- 执行者在执行过程中获得该程序用户组的支持
+
+对于**目录**提供的功能：
+
+- 用户若对于此目录具有`rx`权限，则该用户能进入目录
+- 用户对此目录的有效用户组会变成该目录的用户组
+- 若用户再此目录下具有`w`权限，则用户创建的新文件的用户组与此目录的用户组相同
+
+#### SBIT
+
+​	Sticky Bit(SBIT)目前只针对目录有效，作用是：
+
+> 若用户对目录具有`wx`权限，当用户在该目录下创建文件或目录时，仅有自己与root才有权利删除该文件。
+
+
+
+## Linux文件目录
+
+​	Filesystem Hierarchy Standard(FHS)标准，规定每个特定的Linux目录下应该要放置什么样子的数据。FHS定义出三层目录：
+
+- / ，根目录，与开机系统有关
+- /usr , Unix software resource，与软件安装有关
+- /var，variable，与系统运作过程有关
+
+### 四种交互作用形态
+
+![image-20211223114038459](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223114038459.png)
+
+- 可分享的
+
+  分享给其他系统挂载使用的目录
+
+- 不可分享的
+
+  仅与自身机器有关，不适合分享给其他主机
+
+- 不变的
+
+  有些数据不经常变动，跟随distribution而不变动。如函数库、文件说明文件等。
+
+- 可变动的
+
+  进程改变的数据，如登录文件等。
+
+### 常见目录
+
+#### 根目录(/)的内容
+
+​	FHS建议，根目录所在分区应该越小越好，且应用程序所安装的软件最好不要与根目录放在同一个分区。
+
+​	根目录与开机有关，**开机过程中仅有根目录会被挂载**，其他分区在开机后陆续进行挂载。下面这些目录一定要和根目录放在同一分区下：
+
+- /etc 配置文件
+- /bin 重要执行文件
+- /dev 需要的设备文件
+- /lib 执行文件所需要的函数库与内核所需的模块
+- /sbin 重要的系统执行文件
+
+​	根目录下的常见子目录如下：
+
+![image-20211223114837952](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223114837952.png)
+
+![image-20211223114851313](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223114851313.png)
+
+#### `/usr`的内容
+
+​	是所有系统默认软件的安装目录。/usr的子目录建议有下列：
+
+![image-20211223151450942](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223151450942.png)
+
+​	
+
+#### `/var`内容
+
+​	在系统运行之后逐渐填满容量的目录，包括缓存、登录文件、软件运行所产生的文件等。
+
+![image-20211223152046728](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223152046728.png)
+
+### 绝对路径和相对路径
+
+- 绝对路径：由根目录(/)开始写起的文件名或目录名称
+- 相对路径：相对当前路径的文件名写法。`./xx`，`../xx`，`xx/xx`等
+  - `.`代表当前目录
+  - `..`代表上一层目录
+
+## Linux文件命令
+
+### 目录相关命令
+
+#### 切换目录cd
+
+```shell
+cd
+```
+
+#### 显示当前目录pwd
+
+```shell
+pwd [-P]
+```
+
+-P参数显示出当前路径，而非连接路径
+
+#### 新建目录mkdir
+
+```shell
+mkdir [-mp] filename
+```
+
+- -m 777
+
+  配置文件的权限
+
+- -p filename1/filename2
+
+  递归创建目录
+
+#### 删除一个空的目录rmdir
+
+```shell
+rmdir [-p] filename
+```
+
+递归删除目录
+
+#### 查看文件与目录ls
+
+![image-20211223171658704](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223171658704.png)
+
+![image-20211223171810849](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223171810849.png)
+
+​	其中`ls -l`命令有个别名为`ll`。
+
+#### 复制cp
+
+![image-20211223171917441](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223171917441.png)
+
+​	特别注意，**在默认的条件中，cp的源文件与目的文件的权限是不同的，目的文件的所有者通常会是命令操作者本身**。
+
+#### 移除rm
+
+![image-20211223172715286](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223172715286.png)
+
+#### 移动mv
+
+![image-20211223172939196](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223172939196.png)
+
+#### 取路径的文件名basename和目录名称dirname
+
+![image-20211223173744142](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223173744142.png)
+
+### 文件内容相关
+
+#### 从第一开始显示cat
+
+![image-20211223174226131](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223174226131.png)
+
+#### 从最后一行开始显示tac
+
+```shell
+tac filename
+```
+
+#### 带行号输出nl
+
+![image-20211223174807041](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223174807041.png)
+
+#### 一页一页显示more
+
+```shell
+more filename
+```
+
+可用的操作：
+
+- 空格键，向下翻一页
+- Enter，向下滚动一行
+- /字符串，向下查询“字符串”关键字
+- :f，立刻显示出文件名以及目前显示的行数
+- q，立刻离开more，不再显示该文件内容
+- b或[Ctrl]+b，往回翻页
+
+#### 可以往前翻页显示less
+
+​	在more的功能基础上，加上往前翻页的功能
+
+```shell
+less filename
+```
+
+​	可用的操作：
+
+- 空格键，往下翻一页
+- [PageDown]，往下翻一页
+- [PageUp]，往上翻一页
+- /字符串，向下查询“字符串”的功能
+- ?字符串，向上查询“字符串”的功能
+- n，重复前一个查询（与/或?有关）
+- N，反向重复前一个查询（与/或?有关）
+- q，离开less这个程序
+
+#### 只看头几行head
+
+![image-20211223180110583](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223180110583.png)
+
+#### 只看结尾几行tail
+
+![image-20211223180132401](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223180132401.png)
+
+#### 二进制方式读取文件od
+
+![image-20211223180349752](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223180349752.png)
+
+#### 修改文件时间或创建新文件touch
+
+![image-20211224104756745](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211224104756745.png)
 
