append sth to virbd-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -289,6 +289,10 @@ tags: 操作系统OS
 
 ​	几乎所有的硬件设备文件都在`/dev`这个目录内。
 
+​	系统通过文件的**major与minor**数值识别设备文件。常见硬盘的值如下：
+
+![image-20211229145645115](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229145645115.png)
+
 ## Linux磁盘分区
 
 ### 磁盘分区文件
@@ -561,7 +565,213 @@ lsb_release -a
 
 # Linux文件系统
 
-​	Linux使用Ext2/Ext3作为文件系统。
+## 文件系统与磁盘管理
+
+​	Linux使用Ext2/Ext3作为文件系统。其中EXT2是Linux最传统的磁盘文件系统。
+
+### 文件系统结构
+
+#### 不同的OS使用不同文件系统
+
+​	磁盘分区后，需要进行**格式化**。因为每种操作系统所设置的文件属性/权限并不相同，为了存放这些文件所需的数据，因此需要将分区进行格式化，以成为操作系统能够利用的文件系统格式。Windows并不认识Linux的Ext2文件系统。
+
+- Windows 98，使用FAT或FAT16文件系统
+- Windows 2000以后，使用NTFS文件系统
+- Linux，使用**Linux second extended file system**(Ext2fs)文件系统
+
+#### 文件系统位置
+
+​	传统磁盘，一个分区只能被格式化为一个文件系统。
+
+​	但由于LVM与软磁盘阵列(software raid)，这些技术可以将一个分区格式化为多个文件系统（例如LVM），也能够将多个分区合成一个文件系统（LVM，RAID）。
+
+​	通常我们可以称呼**一个可被挂载的数据为一个文件系统而不是一个分区**。
+
+#### Ext2底层结构
+
+- Super block：记录文件系统的整体信息，包括inode/block的总量、使用量、剩余量，以及文件系统的格式与相关信息等。
+- inode：记录文件的属性，一个文件占用一个inode，同时记录此文件的数据所在的block号码
+- block：实际记录文件的内容，若文件太大时，会占用多个block
+
+文件系统先格式化出inode与block的块。系统文件的**属性与权限**数据放置到inode，而inode记录了文件数据的实际放置点的block号码。此时操作系统就据此排列磁盘的阅读顺序。这种方式称为**索引式文件系统**。
+
+![image-20211227141949090](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227141949090.png)
+
+​	Ext2文件系统在格式化的时候，区分为多个块组（block group)的，每个块组都有独立的inode/block/superblock系统。**文件系统最前面有一个启动扇区（boot sector)，这个启动扇区可以安装引导装载程序**。
+
+![image-20211227142959039](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227142959039.png)
+
+- data block（数据块）
+
+  是用来放置文件内容的地方。在Ext2文件系统中所支持的block大小有1KB，2KB，4KB。在格式化时，block的大小和编号就固定了。不同block大小，对文件系统有些影响：
+
+  ![image-20211227143757121](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227143757121.png)
+
+  每个block内最多只能放置一个文件的数据：
+
+  - 如果文件大于block的大小，则一个文件会占用多个block数量
+  - 若文件小于block，则该block的剩余空间就不能够再被使用了（磁盘空间会浪费）。
+
+- inodetable(inode表格)
+
+  inode的数量和大小在格式化的时候也被固定，除了用来放文件的属性和权限外，还具有下列特性：
+
+  - 每个inode大小均固定为128bytes
+  - 每个文件都仅会占用一个inode而已。**所以文件系统能够创建的文件数量与inode的数量有关**。
+
+  inode记录block号码的区域定义为**12个直接记录区、1个间接记录区、1个双间接记录区、1个三间记录区**。
+
+  ![image-20211227144546633](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227144546633.png)
+
+- Superblock（超级块）
+
+  记录整个文件系统相关信息的地方：
+
+  - block与inode的总量
+  - 未使用与已使用的inode/block数量
+  - block与inode的大小
+  - 文件系统的挂载时间、最近一次写入数据的时间、最近一次检验磁盘(fsck)的时间等文件系统的相关信息
+  - 一个valid bit数值，若此文件系统已被挂载，则valid bit为0；若未被挂载，则valid bit为1。
+
+  **一般来说，superblock的大小为1024bytes**。一个文件一般应该仅有一个superblock。处理第一个block group含有superblock外，后续的block group不一定含有superblock，若含有则该superblock主要是作为第一个block group内的备份，可以进行superblock的救援。
+
+- File system Description（文件系统描述说明）
+
+  可以描述每个block group的开始与结束的block号码，以及说明每个区段(superblock，bitmap，inodemap, data block)分别介于哪一个block号码之间。
+
+- block bitmap(块对照表)
+
+  从block bitmap中可以知道哪些block是空的，方便新建文件
+
+  删除文件时，在block bitmap中对应的block号码的标志改为“未使用中”。
+
+- inode bitmap(inode对照表)
+
+  与block bitmap类似，只不过是记录inode的信息。
+
+#### U盘底层结构
+
+​	U盘（闪存），使用文件系统一般为FAT格式。FAT没有inode，它将每个block号码都记录在前一个block当中。
+
+![image-20211227142603771](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227142603771.png)
+
+#### 与目录树关系
+
+- 目录
+
+  ext2分配一个inode和至少一块block。
+
+  block里面记录在整个目录下的文件名与文件名占用的inode号码。
+
+  **文件系统最顶层的目录的inode一般为2号**。
+
+- 文件
+
+  ext3分配一个inode和多个block记录文件内容。
+
+#### 与内存的交互
+
+​	Linux使用异步处理（asynchronously）来解决读写磁盘慢的问题。
+
+- 当系统文件到内存后，若文件没有被改动过，则内存区段的文件被设置为clean
+- 当更改过后，内存中的数据被设置为Dirty。所有的操作都在内存中执行，并没有写入磁盘。系统会不定时将内存中设置为Dirty的数据写会磁盘。也可以使用`sync`强制写入磁盘。
+
+### 文件压缩与打包
+
+#### 文件解压缩技术
+
+- 定义
+
+  由于二进制的0和二进制文件一些重复数据可以进行统计记录的原因，文件空间并不是完全被填满的。
+
+- 压缩比
+
+  压缩前与压缩后的文件所占用的磁盘空间大小的比值
+
+- Linux常见压缩文件后缀
+
+  **compress、gizp、bzip都是对单一文件进行压缩**
+
+  ![image-20211229154418756](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229154418756.png)
+
+#### 打包
+
+​	将多个文件后目录包成一个大文件的命令功能。
+​	`tar`命令，除了打包外，还支持通过gzip/bzip2进行压缩。
+
+### 完整备份和恢复
+
+​	使用`dump`命令可以对**整个文件系统备份**，也可以对**单个目录备份**。在多次备份中，后一次备份只备份与前一次备份的**有变化的文件**。
+
+![image-20211229160858256](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229160858256.png)
+
+​	使用`restore命令可以恢复系统的数据
+
+### 磁盘管理
+
+#### 新增磁盘步骤
+
+1. 对磁盘进行分区，以新建可用的分区
+2. 对分区进行格式化，以创建系统可用的文件系统，并进行检验
+3. 在Linux上，需要创建挂载点（目录），并进行挂载
+
+#### 设置开机挂载
+
+​	在`/etc/fstab`里面设置挂载相关信息。
+
+![image-20211229150611105](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229150611105.png)
+
+​	其中第4列是一些特殊的文件系统参数(mount参数设置也有见)，如下：
+
+![image-20211229151139984](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229151139984.png)
+
+​	第5列是指示“能否被dump备份命令使用”
+
+>0：不做dump备份
+>
+>1：每天进行dump操作
+>
+>2：不定日期的dump备份操作
+
+​	第6列是“是否以fsck检验扇区”
+
+> 0：不要检验
+>
+> 1：最早检验
+
+#### 特殊设备挂载
+
+- 镜像文件直接挂载
+
+  ![image-20211229151922645](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229151922645.png)
+
+- 创建大文件以制作loop设备文件挂载
+
+  对大文件格式化+挂载
+
+  ```shell
+  mkfs -t ext3 /home/loopdev
+  
+  mount -o loop /home/loopdev /media/cdrom/
+  ```
+
+#### 相关配置文件
+
+挂载相关配置文件
+
+- Linux支持的文件系统的驱动
+
+  `/lib/modules/$(uname -r)/kernel/fs/`
+
+- 系统指定的测试（默认）挂载文件系统类型
+
+  `/etc/filesystems`
+
+- 系统已经加载的文件系统类型
+
+  `/proc/filesystems`
+
+- 挂载信息设置`etc/fstab`、`/etc/mtab`和`/proc/mounts`
 
 ## 文件属性与权限
 
@@ -597,9 +807,29 @@ lsb_release -a
   第一个字符代表文件是“目录、文件或链接文件等”
 
   - [d]是目录
+
   - [-]是文件
+
   - [l]表示连接文件（linkfile）
+
+    有两种连接文件的方式：
+
+    - hard link（硬连接/实际连接）
+
+      在某个目录下新建一条**文件名连接到某inode号码**的关联记录
+
+      ![image-20211227155701119](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227155701119.png)
+
+      有两个限制：不能跨文件系统，不能连接到目录
+
+    - symbolic link（符号连接，即快捷方式）
+
+      创建一个单独的文件，这个文件会让数据的读取指向它连接的那个文件的文件名。
+
+      ![image-20211227160109388](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227160109388.png)
+
   - [b]表示可供存储的接口设备
+
   - [c]表示串行端口设备，如键盘、鼠标等
 
   后面9个字符，3个分为一组"rwx"的组合，r为可读，w为可写，x为可执行。如果没有相应权限，用[-]代替。
@@ -628,6 +858,35 @@ lsb_release -a
     - x权限，表示用户能否进入该目录成为工作目录
 
       即cd命令能否进入
+
+  **总而言之**：
+
+  > - 让用户能进入某目录成为“可工作目录”的基本权限：
+  >
+  >   1. 可使用的命令：`cd等切换工作目录命令
+  >   2. 目录所需权限：用户对这个目录至少具有`x`权限
+  >   3. 额外需求：如果用户想要在这个目录使用`ls`，则还需要`r`权限
+  >
+  > - 用户在某个目录内读取一个文件的基本权限：
+  >
+  >   1. 可使用的命令：`cat`、`more`等命令
+  >   2. 目录所需权限：用户对这个至少具有`x`权限
+  >   3. 文件所需权限：用户对文件至少需要具有`r`的权限才行
+  >
+  > - 让用户可以修改一个文件的基本权限：
+  >
+  >   1. 可使用的命令：`nano`、`vim`等编辑器
+  >   2. 目录所需权限：用户在该文件所在的目录至少要有x权限
+  >   3. 文件所需权限：用户对该文件至少要有`rw`权限
+  >
+  > - 让一个用户可以创建一个文件的基本权限：
+  >
+  >   目录所需权限：用户再该目录要具有`wx`权限，特别是`w`权限
+  >
+  > - 让用户进入某目录并执行该目录下的命令的基本权限：
+  >
+  >   1. 目录所需权限：用户在该目录至少具有`x`权限
+  >   2. 文件所需权限：用户在该文件至少需要有`x`权限
 
 - 第二列，有多少文件名连接到此节点
 
@@ -803,9 +1062,17 @@ umask xxx #直接设置ugo需要去掉的权限
 
 > 若用户对目录具有`wx`权限，当用户在该目录下创建文件或目录时，仅有自己与root才有权利删除该文件。
 
+#### 特殊权限的设置
+
+​	依然使用`chmod`命令，但需要在之前数字方式的基础上，使用4个数字修改权限，最前面的数字就是代表`SUID`、`SGID`、`SBIT`的权限。
+
+- SUID: 4
+- SGID: 2
+- SBIT: 1
 
 
-## Linux文件目录
+
+## Linux目录详解
 
 ​	Filesystem Hierarchy Standard(FHS)标准，规定每个特定的Linux目录下应该要放置什么样子的数据。FHS定义出三层目录：
 
@@ -874,7 +1141,7 @@ umask xxx #直接设置ugo需要去掉的权限
   - `.`代表当前目录
   - `..`代表上一层目录
 
-## Linux文件命令
+## Linux文件系统命令
 
 ### 目录相关命令
 
@@ -940,7 +1207,7 @@ rmdir [-p] filename
 
 ![image-20211223173744142](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211223173744142.png)
 
-### 文件内容相关
+### 文件内容相关命令
 
 #### 从第一开始显示cat
 
@@ -1005,4 +1272,175 @@ less filename
 #### 修改文件时间或创建新文件touch
 
 ![image-20211224104756745](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211224104756745.png)
+
+#### 查看文件类型file
+
+​	获取文件的基本数据的类型，如ASCII文件、data文件、binary文件，或是有没有动态函数库(share library)等信息。
+
+```shell
+file filename
+```
+
+### 文件压缩打包命令
+
+#### 解压缩命令
+
+- compress
+
+  ![image-20211229154657937](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229154657937.png)
+
+- gzip
+
+  ![image-20211229154921021](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229154921021.png)
+
+- ![image-20211229154947217](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229154947217.png)
+
+#### 打包命令
+
+![image-20211229160014952](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229160014952.png)
+
+常用操作：
+
+- 压缩
+
+  ```shell
+  tar -jcv -f tarfilename.tar.bz2 filename
+  ```
+
+- 查询
+
+  ```shel
+  tar -jtv -f tarfilename.tar.bz2
+  ```
+
+- 解压缩
+
+  ```shell
+  tar -jxv -f tarfilename.tar.bz2 -C filename
+  ```
+
+### 文件/命令的信息查询命令
+
+#### 脚本文件名查询which
+
+​	根据PATH环境变量所规范的路径，去查询完整文件名或命令路径。
+
+![image-20211227121425091](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227121425091.png)
+
+#### 按文件名查找相关文件whereis/locate/find
+
+​	这两个命令查询的时候根据**文件数据库**查询，速度会快很多。相对于`find`命令，是直接去磁盘找。
+
+- `whereis`
+
+  ![image-20211227122111403](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227122111403.png)
+
+- `locate`
+
+  ![image-20211227122434362](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227122434362.png)
+
+  其中`keyword`指的是可以根据`文件部分名称`查找相关的文件。
+
+  - 数据库文件：`/var/lib/mlocate/`
+  - 更新数据库：
+    - 命令：`updatedb`
+    - 配置文件：`/etc/updatedb.conf`
+
+- `find`
+
+  ![image-20211227123151130](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227123151130.png)![image-20211227123201007](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227123201007.png)![image-20211227123337769](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227123337769.png)![image-20211227123420024](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227123420024.png)![image-20211227123511169](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227123511169.png)
+
+### Linux磁盘命令
+
+#### 查询磁盘每个区段信息dumpe2fs
+
+![image-20211227150331559](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227150331559.png)
+
+#### 列出文件系统的整体磁盘使用df
+
+![image-20211227154617262](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227154617262.png)
+
+#### 评估文件系统的磁盘使用量du
+
+![image-20211227155016624](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227155016624.png)
+
+#### 连接文件ln
+
+![image-20211227160403922](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211227160403922.png)
+
+#### 磁盘分区fdisk
+
+![image-20211229140604320](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229140604320.png)
+
+该命令之后会进入一个交互式环境：
+
+![image-20211229140841468](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229140841468.png)
+
+#### 磁盘格式化mkfs/mke2fs
+
+- mkfs
+
+  进行格式化，创建文件系统
+
+  ![image-20211229141501494](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229141501494.png)
+
+- mke2fs
+
+  自定义数据创建文件系统
+
+  ![image-20211229141838478](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229141838478.png)
+
+#### 磁盘检验fsck/badblocks
+
+- fsck
+
+  检验文件系统是否出错
+
+  执行fsck时，**被检查的分区务必不可挂载到系统上！**
+
+  执行完成后，若系统磁盘有问题会在**挂载点目录**下面创建`lost+found`目录，存放有问题的数据
+
+  ![image-20211229142400667](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229142400667.png)
+
+- badblocks
+
+  检查硬盘或软盘扇区有无坏轨
+
+  可以被`mke2fs -c 设备文件名`命令代替，不常用badblocks。
+
+  ![image-20211229143439923](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229143439923.png)
+
+#### 磁盘挂载mount
+
+​	挂载是将参数写入`/etc/mtab`和`/proc/mounts`文件
+
+![image-20211229143811728](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229143811728.png)
+
+#### 磁盘卸载umount
+
+![image-20211229144827724](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229144827724.png)
+
+#### 修改设备文件参数mknod
+
+![image-20211229145806337](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229145806337.png)
+
+#### 修改磁盘卷标e2label
+
+![image-20211229150006799](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229150006799.png)
+
+#### 更改文件系统类型tune2fs
+
+![image-20211229150104697](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229150104697.png)
+
+#### 新建镜像文件mkisofs
+
+![image-20211229161135999](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229161135999.png)
+
+#### 光盘刻录cdrecord
+
+![image-20211229161253678](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229161253678.png)
+
+# Shell
+
+## Vim
 
